@@ -65,6 +65,8 @@ atmega32
 atmega64
 .br
 atmega128
+.br
+at90can128 (experimental)
 .RE
 .SS Supported File Formats
 .B avarice
