@@ -297,6 +297,42 @@ jtag_device_def_type deviceDefinitions[] = {
             { JTAG_EOM }
         }
     },
+    // DEV_ATCAN_128
+    {
+        "at90can128",
+        0x9781,
+        256, 512,    // 128K flash 
+        8,   512,    // 4K bytes EEPROM
+        0x94,        // 37 interrupt vectors
+        NULL,        // io reg defs not defined yet
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            { 0xFF, 0xFF, 0xFF, 0xF1, 0xDF, 0x7C, 0xBB, 0xE8 }, 
+            { 0xFF, 0xFF, 0xFF, 0xF1, 0xDF, 0x7C, 0xBB, 0xE8 }, 
+            { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 },
+            { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 },
+            { 0x43, 0xC3, 0x33, 0xBF, 0xF7, 0x3F, 0xF7, 0x3F,
+              0x00, 0x00, 0x4D, 0x1F, 0x77, 0x77, 0x00, 0xFF,
+              0xFF, 0xFF, 0xFF, 0x07 },
+            { 0x43, 0xC3, 0x33, 0xBC, 0x77, 0x77, 0xF7, 0x3F,
+              0x00, 0x00, 0x4D, 0x1F, 0x00, 0x00, 0x00, 0xCD,
+              0x3C, 0xF0, 0xFF, 0x04 },
+            { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+              0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+              0x00, 0x00, 0x00, 0x00 },
+            { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+              0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+              0x00, 0x00, 0x00, 0x00 },
+            0x22,
+            0x57,
+            0x3B,
+            { 0, 1 },
+            8,
+            { 0x00, 0xFE, 0x00, 0x00 },
+            0xFA,
+            { JTAG_EOM }
+        }
+    },
 #if 0
     // DEV_UNKNOWN - what avarice came with (looks like a garbled 128)
     {
